--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ET Bottled Water Market  • Mini App</title>
+  <title>Gold Water • ET Bottled Water</title>
 
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
@@ -28,20 +28,19 @@
       padding: 16px;
       padding-bottom: 90px;
       transition: background 0.4s, color 0.4s;
-      overflow-y: auto; /* Ensure scrolling */
     }
 
-    h1 { font-size: 26px; text-align: center; margin: 0 0 20px; }
+    h1 { font-size: 26px; text-align: center; margin: 0 0 24px; }
 
     .product {
       background: var(--secondary);
       border-radius: 16px;
       padding: 16px;
-      margin-bottom: 16px;
+      margin-bottom: 24px;
       position: relative;
       overflow: hidden;
       transition: transform 0.15s;
-      cursor: pointer; /* Indicate clickable for details */
+      cursor: pointer;
     }
 
     .product:active { transform: scale(0.98); }
@@ -54,28 +53,28 @@
       object-fit: cover;
     }
 
-    .product h3 { font-size: 19px; margin-bottom: 6px; }
-    .product .desc { color: var(--hint); font-size: 14px; margin-bottom: 10px; }
+    .product h2 { font-size: 22px; margin-bottom: 8px; }
+    .product .desc { color: var(--hint); font-size: 15px; margin-bottom: 12px; line-height: 1.4; }
     .product .price {
-      font-size: 20px;
+      font-size: 24px;
       font-weight: 700;
       color: var(--accent);
-      margin-bottom: 12px;
+      margin-bottom: 16px;
     }
 
     .added-flash {
       position: absolute;
       inset: 0;
-      background: rgba(46,125,50,0.15);
+      background: rgba(46,125,50,0.18);
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 32px;
+      font-size: 40px;
       font-weight: bold;
       color: var(--accent);
       opacity: 0;
       pointer-events: none;
-      transition: opacity 0.5s;
+      transition: opacity 0.6s;
       z-index: 2;
     }
 
@@ -84,18 +83,19 @@
     .qty-controls {
       display: flex;
       align-items: center;
-      gap: 12px;
-      margin-top: 10px;
+      gap: 16px;
+      margin-top: 12px;
+      justify-content: center;
     }
 
     .qty-btn {
-      width: 38px;
-      height: 38px;
+      width: 44px;
+      height: 44px;
       border-radius: 50%;
       background: var(--button);
       color: white;
-      font-size: 20px;
-      line-height: 38px;
+      font-size: 24px;
+      line-height: 44px;
       text-align: center;
       cursor: pointer;
       user-select: none;
@@ -104,109 +104,95 @@
 
     .qty-btn:active { background: #006699; }
 
-    #products { margin-bottom: 100px; }
-
     #cart-summary {
       position: fixed;
       bottom: 0; left: 0; right: 0;
       background: var(--bg);
       border-top: 1px solid var(--secondary);
-      padding: 12px 16px;
-      box-shadow: 0 -4px 12px rgba(0,0,0,0.08);
+      padding: 16px;
+      box-shadow: 0 -4px 16px rgba(0,0,0,0.1);
       transform: translateY(100%);
       transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
     }
 
     #cart-summary.visible { transform: translateY(0); }
 
-    .cart-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; }
+    .cart-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px; }
     .cart-header h2 { font-size: 18px; }
 
-    #cart-items { list-style: none; max-height: 180px; overflow-y: auto; margin-bottom: 12px; }
+    #cart-items { list-style: none; margin-bottom: 12px; }
     .cart-item {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 10px 0;
+      padding: 12px 0;
       border-bottom: 1px solid var(--secondary);
-      font-size: 15px;
+      font-size: 16px;
     }
 
-    .cart-item-name { flex: 1; }
-    .cart-item-price { font-weight: bold; color: var(--accent); min-width: 80px; text-align: right; }
+    .cart-item-name { flex: 1; font-weight: 500; }
+    .cart-item-price { font-weight: bold; color: var(--accent); min-width: 90px; text-align: right; }
 
     .remove-btn {
       color: var(--danger);
-      font-size: 18px;
-      width: 32px;
-      height: 32px;
-      line-height: 32px;
+      font-size: 22px;
+      width: 36px;
+      height: 36px;
+      line-height: 36px;
       text-align: center;
       cursor: pointer;
     }
 
     #total {
-      font-size: 19px;
+      font-size: 20px;
       font-weight: 700;
       text-align: right;
-      margin: 8px 0 12px;
-      transition: transform 0.3s;
+      margin: 12px 0;
     }
 
-    #total.changed { transform: scale(1.08); }
-    #total.changed.done { transform: scale(1); }
+    #empty { text-align: center; color: var(--hint); padding: 40px 0; font-size: 16px; }
 
-    #empty { text-align: center; color: var(--hint); padding: 30px 0; font-size: 16px; }
-
-    /* Modal for details */
+    /* Modal */
     #modal {
       position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(0,0,0,0.7);
+      inset: 0;
+      background: rgba(0,0,0,0.65);
       display: none;
       align-items: center;
       justify-content: center;
-      z-index: 10;
-      overflow-y: auto;
+      z-index: 100;
     }
 
     #modal.show { display: flex; }
 
     .modal-content {
       background: var(--bg);
-      border-radius: 16px;
-      padding: 20px;
+      border-radius: 20px;
+      padding: 24px;
       margin: 20px;
       max-width: 90%;
       position: relative;
-      animation: fadeIn 0.3s;
     }
-
-    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
     .close-modal {
       position: absolute;
-      top: 10px;
-      right: 10px;
-      font-size: 24px;
+      top: 12px;
+      right: 16px;
+      font-size: 28px;
       cursor: pointer;
       color: var(--hint);
     }
 
     .modal-img {
       width: 100%;
-      height: auto;
-      border-radius: 12px;
+      border-radius: 16px;
       margin-bottom: 16px;
     }
 
     .modal-desc {
-      color: var(--text);
       font-size: 16px;
       line-height: 1.5;
+      margin-bottom: 16px;
     }
 
     @media (min-width: 500px) {
@@ -216,8 +202,18 @@
 </head>
 <body>
 
-  <h1>Bottled Water Store</h1>
-  <div id="products"></div>
+  <h1>Gold Water</h1>
+
+  <div class="product" id="product-card">
+    <img src="https://i.postimg.cc/xTXcXRGR/gold-water-image.webp" alt="Gold Water">
+    <h2>Gold Water</h2>
+    <div class="desc">Premium gold-infused spring water – luxurious hydration with a refreshing and crisp taste.</div>
+    <div class="price">45 Stars</div>
+    <div class="qty-controls">
+      <div class="qty-btn" onclick="addToCart()">+</div>
+    </div>
+    <div class="added-flash" id="flash">Added!</div>
+  </div>
 
   <div id="cart-summary">
     <div class="cart-header">
@@ -229,18 +225,23 @@
 
     <div id="total">Total: 0 Stars</div>
 
-    <div id="empty">Cart is empty — add some water! 💧</div>
+    <div id="empty">Your cart is empty – add Gold Water! 💧</div>
   </div>
 
-  <!-- Modal for product details -->
+  <!-- Details Modal -->
   <div id="modal">
     <div class="modal-content">
       <span class="close-modal" onclick="closeModal()">×</span>
-      <h2 id="modal-title"></h2>
-      <img id="modal-img" src="" alt="">
-      <p class="modal-desc" id="modal-desc"></p>
-      <p class="price" id="modal-price"></p>
-      <button class="qty-btn" style="width: auto; padding: 10px 20px; border-radius: 10px;" onclick="addToCartFromModal()">Add to Cart</button>
+      <h2>Gold Water</h2>
+      <img class="modal-img" src="https://i.postimg.cc/xTXcXRGR/gold-water-image.webp" alt="Gold Water">
+      <p class="modal-desc">
+        Premium gold-infused spring water – luxurious hydration with a refreshing and crisp taste.<br><br>
+        Perfect for those who want something special and elegant in every sip.
+      </p>
+      <p class="price">45 Stars</p>
+      <div class="qty-controls" style="justify-content: center; margin-top: 16px;">
+        <div class="qty-btn" onclick="addToCart()">Add to Cart</div>
+      </div>
     </div>
   </div>
 
@@ -248,6 +249,7 @@
     const tg = window.Telegram.WebApp;
     tg.ready();
     tg.expand();
+
     tg.MainButton.setParams({
       text: 'Checkout',
       color: '#0088cc',
@@ -255,7 +257,7 @@
     });
     tg.MainButton.hide();
 
-    // Theme sync
+    // Theme
     function applyTheme() {
       const th = tg.themeParams;
       document.documentElement.style.setProperty('--bg', th.bg_color || '#ffffff');
@@ -268,22 +270,20 @@
     applyTheme();
     tg.onEvent('themeChanged', applyTheme);
 
-    // ─── Products (6 brands with placeholders) ───────────────────────────────
-    const products = [
-      { id:1, name:"Brand 1: Spring Water", price:45, desc:"Pure natural spring water from the mountains. Refreshing and crisp taste.", image: "https://i.postimg.cc/xTXcXRGR/gold-water-image.webp"},
-      { id:2, name:"Brand 2: Mineral Water", price:85, desc:"Naturally mineralized water with essential electrolytes for hydration.", image: "https://placehold.co/300x200?text=Brand+2" },
-      { id:3, name:"Brand 3: Alkaline Water", price:120, desc:"High pH water to balance your body's acidity. Smooth and clean.", image: "https://placehold.co/300x200?text=Brand+3" },
-      { id:4, name:"Brand 4: Sparkling Water", price:65, desc:"Carbonated water with a fizzy twist. Perfect for mixing drinks.", image: "https://placehold.co/300x200?text=Brand+4" },
-      { id:5, name:"Brand 5: Purified Water", price:50, desc:"Ultra-purified water through reverse osmosis. Crystal clear.", image: "https://placehold.co/300x200?text=Brand+5" },
-      { id:6, name:"Brand 6: Flavored Water", price:95, desc:"Lightly flavored with natural fruits. Zero calories, great taste.", image: "https://placehold.co/300x200?text=Brand+6" },
-    ];
+    // Single product data
+    const product = {
+      id: 1,
+      name: "Gold Water",
+      price: 45,
+      desc: "Premium gold-infused spring water – luxurious hydration with a refreshing and crisp taste.",
+      image: "https://i.postimg.cc/xTXcXRGR/gold-water-image.webp"
+    };
 
-    let cart = [];
-    let currentProductId = null;
+    let cart = []; // will only contain multiples of this one product
 
     // ─── Cart persistence ────────────────────────────────
     function loadCart() {
-      tg.CloudStorage.getItem('cart_v2', (err, val) => {
+      tg.CloudStorage.getItem('gold_cart', (err, val) => {
         if (!err && val) {
           cart = JSON.parse(val);
           renderCart();
@@ -293,77 +293,42 @@
     }
 
     function saveCart() {
-      tg.CloudStorage.setItem('cart_v2', JSON.stringify(cart));
+      tg.CloudStorage.setItem('gold_cart', JSON.stringify(cart));
     }
 
     // ─── Cart logic ──────────────────────────────────────
-    function addToCart(product) {
-      let item = cart.find(i => i.id === product.id);
-      if (item) item.qty++;
-      else cart.push({ ...product, qty: 1 });
+    function addToCart() {
+      let item = cart[0];
+      if (item) {
+        item.qty++;
+      } else {
+        cart = [{ ...product, qty: 1 }];
+      }
 
       saveCart();
       tg.HapticFeedback.impactOccurred('medium');
       renderCart();
       updateMainButton();
 
-      // Flash feedback
-      const card = document.querySelector(`[data-id="${product.id}"]`);
-      if (card) {
-        const flash = card.querySelector('.added-flash');
-        flash.classList.add('show');
-        setTimeout(() => flash.classList.remove('show'), 800);
-      }
+      // Flash
+      const flash = document.getElementById('flash');
+      flash.classList.add('show');
+      setTimeout(() => flash.classList.remove('show'), 900);
     }
 
-    function changeQty(id, delta) {
-      const item = cart.find(i => i.id === id);
+    function changeQty(delta) {
+      let item = cart[0];
       if (!item) return;
       item.qty = Math.max(0, item.qty + delta);
-      if (item.qty === 0) removeFromCart(id);
-      else {
-        saveCart();
-        renderCart();
-        tg.HapticFeedback.impactOccurred('light');
+      if (item.qty === 0) {
+        cart = [];
       }
-    }
-
-    function removeFromCart(id) {
-      cart = cart.filter(i => i.id !== id);
       saveCart();
       renderCart();
-      tg.HapticFeedback.notificationOccurred('warning');
-      updateMainButton();
+      tg.HapticFeedback.impactOccurred('light');
     }
 
     // ─── Rendering ───────────────────────────────────────
-    function renderProducts() {
-      const cont = document.getElementById('products');
-      products.forEach(p => {
-        const div = document.createElement('div');
-        div.className = 'product';
-        div.dataset.id = p.id;
-        div.innerHTML = `
-          <img src="${p.image}" alt="${p.name}">
-          <h3>${p.name}</h3>
-          <div class="desc">${p.desc.substring(0, 50)}...</div> <!-- Teaser desc -->
-          <div class="price">${p.price} Stars</div>
-          <div class="qty-controls">
-            <div class="qty-btn" onclick="event.stopPropagation(); addToCartFromId(${p.id})">+</div>
-          </div>
-          <div class="added-flash">Added!</div>
-        `;
-        div.addEventListener('click', () => showDetails(p.id)); // Click for details
-        cont.appendChild(div);
-      });
-    }
-
-    window.addToCartFromId = (id, event) => {
-      if (event) event.stopPropagation();
-      const p = products.find(x => x.id === id);
-      if (p) addToCart(p);
-    };
-
     function renderCart() {
       const list = document.getElementById('cart-items');
       const totalEl = document.getElementById('total');
@@ -385,30 +350,25 @@
       emptyEl.style.display = 'none';
       summary.classList.add('visible');
 
-      let total = 0;
-      cart.forEach(item => {
-        total += item.price * item.qty;
-        const li = document.createElement('li');
-        li.className = 'cart-item';
-        li.innerHTML = `
-          <span class="cart-item-name">${item.name}</span>
-          <div class="qty-controls" style="margin:0; width:auto;">
-            <div class="qty-btn" onclick="changeQty(${item.id}, -1)">−</div>
-            <span style="min-width:24px; text-align:center;">${item.qty}</span>
-            <div class="qty-btn" onclick="changeQty(${item.id}, 1)">+</div>
-          </div>
-          <span class="cart-item-price">${item.price * item.qty} Stars</span>
-          <span class="remove-btn" onclick="removeFromCart(${item.id})">×</span>
-        `;
-        list.appendChild(li);
-      });
+      const item = cart[0];
+      const total = item.price * item.qty;
 
-      countEl.textContent = cart.length;
+      const li = document.createElement('li');
+      li.className = 'cart-item';
+      li.innerHTML = `
+        <span class="cart-item-name">${item.name}</span>
+        <div class="qty-controls" style="margin:0; width:auto;">
+          <div class="qty-btn" onclick="changeQty(-1)">−</div>
+          <span style="min-width:30px; text-align:center; font-size:16px;">${item.qty}</span>
+          <div class="qty-btn" onclick="changeQty(1)">+</div>
+        </div>
+        <span class="cart-item-price">${total} Stars</span>
+        <span class="remove-btn" onclick="changeQty(-999)">×</span>
+      `;
+      list.appendChild(li);
+
+      countEl.textContent = item.qty;
       totalEl.textContent = `Total: ${total} Stars`;
-
-      // Animate total
-      totalEl.classList.add('changed');
-      setTimeout(() => totalEl.classList.remove('changed'), 600);
 
       updateMainButton();
     }
@@ -419,37 +379,21 @@
         return;
       }
 
-      const sum = cart.reduce((s, i) => s + i.price * i.qty, 0);
-      tg.MainButton.setText(`Checkout • ${sum} Stars`);
+      const qty = cart[0].qty;
+      const total = cart[0].price * qty;
+      tg.MainButton.setText(`Checkout • ${total} Stars (${qty})`);
       tg.MainButton.show();
     }
 
-    // ─── Details Modal ───────────────────────────────────
-    function showDetails(id) {
-      const p = products.find(x => x.id === id);
-      if (!p) return;
-
-      currentProductId = id;
-
-      document.getElementById('modal-title').textContent = p.name;
-      document.getElementById('modal-img').src = p.image;
-      document.getElementById('modal-img').alt = p.name;
-      document.getElementById('modal-desc').textContent = p.desc;
-      document.getElementById('modal-price').textContent = `${p.price} Stars`;
+    // ─── Modal ───────────────────────────────────────────
+    function showDetails() {
       document.getElementById('modal').classList.add('show');
-
       tg.HapticFeedback.impactOccurred('light');
     }
 
     function closeModal() {
       document.getElementById('modal').classList.remove('show');
-      currentProductId = null;
     }
-
-    window.addToCartFromModal = () => {
-      if (currentProductId) addToCartFromId(currentProductId);
-      closeModal();
-    };
 
     // ─── Checkout simulation ─────────────────────────────
     tg.MainButton.onClick(() => {
@@ -457,12 +401,11 @@
 
       tg.HapticFeedback.impactOccurred('heavy');
 
-      // In real app → POST to backend → tg.openInvoice(...)
-      alert(`Order summary:\n${cart.map(i => `${i.name} × ${i.qty} = ${i.price*i.qty} Stars`).join('\n')}\n\nTotal: ${cart.reduce((s,i)=>s+i.price*i.qty,0)} Stars\n\n(Real version would open Stars invoice here)`);
+      const item = cart[0];
+      alert(`Order summary:\n${item.name} × ${item.qty} = ${item.price * item.qty} Stars\n\n(Real version would open Telegram Stars invoice here)`);
 
-      // Simulate success
       setTimeout(() => {
-        alert("Payment simulation: SUCCESS! Thank you! 💧");
+        alert("Payment simulation: SUCCESS! Thank you for choosing Gold Water! 💧✨");
         cart = [];
         saveCart();
         renderCart();
@@ -471,7 +414,7 @@
     });
 
     // ─── Start ───────────────────────────────────────────
-    renderProducts();
+    document.getElementById('product-card').addEventListener('click', showDetails);
     loadCart();
     renderCart();
   </script>
